--- a/team23.hackathon/css/notestyle.css
+++ b/team23.hackathon/css/notestyle.css
@@ -35,7 +35,7 @@ html {
 }
 
 body {
-    background-color: var(--bg-color);
+    background-color: var(--bg-color);;
     text-align: center;
     color: var(--font-color)
 }
